--- a/app/src/resources/scss/app.scss
+++ b/app/src/resources/scss/app.scss
@@ -111,97 +111,12 @@ body{
     margin-bottom: 33px;
   }
 }
-#block-chat {
+.main-content-page {
   display: flex;
   width: 100%;
   height: 100vh;
   box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
-  .taskbar{
-    width: 4vw;
-    background-color: #0084ff;
-    position: relative;
-    img{
-      width: 3.9vw;
-      height: 3.9vw;
-      border-radius: 50%;
-      margin-top: 20px;
-      margin-bottom: 20px;
-    }
-    .icon-taskbar{
-      color: #fff;
-      width: 100%;
-      padding: 16px 0;
-      background: #0084ff;
-      border: none;
-      //margin-top: 20px;
-      i{
-        font-size: 24px;
-      }
-    }
-    .icon-taskbar:hover{
-      background: rgba(0,0,0,0.1);
-      cursor: pointer;
-    }
-    .icon-taskbar:focus{
-      outline: none;
-    }
-    
-    .btn-logout{
-      background-color: #0084ff;
-      color: #fff;
-      width: 100%;
-      padding: 16px 0;
-      position: absolute;
-      bottom: 10px;  
-      border: none;
-      i{
-        font-size: 24px;
-      }
-    }
-    .btn-logout:hover{
-      cursor: pointer;
-      background: rgba(0,0,0,0.1);
-    }
-    .btn-logout:focus{
-      outline: none;
-    }
-    .modal-myprofile{
-      z-index: 1000;
-      width: 100vw;
-      height: 100vh;
-      display: none;
-      position: absolute;
-      bottom: 0;
-      justify-content: center;
-      align-items: center;
-      background-color: rgba(0,0,0,0.4);
-      .my-profile{
-        display: block;
-        width: 400px;
-        height: 500px;
-        border-radius: 50px;
-        animation: modalFadeIn ease 0.5s;
-        .block-my-pro{
-          width: 100%;
-          display: flex;
-          justify-content: center;
-          .profile-avatar{
-            width: 80px;
-            height: 80px;
-            margin-bottom: 16px;
-            .my-avatar{
-              width: 100%;
-              height: 100%;
-            }
-          }
-        }
-        }
-      }
-    }
-    .modal-myprofile.open{
-      display: flex;
-    }
-  }
+  
   #list-user-block {
     width: 20vw;
     border-right: 1px solid #b5b0b0;
@@ -260,6 +175,7 @@ body{
           .avt-friend{
             width: 100%;
             height: 100%;
+            border-radius: 50%;
           }
         }
       }
@@ -376,106 +292,17 @@ body{
           font-size: 20px;
         }
       }
+      >button:hover{
+        background-color: #F0F2F5;
+        cursor: pointer;
+      }
+      >button:focus{
+        outline: none;
+      }
+    }
 
-    }
-    >button:hover{
-      background-color: #F0F2F5;
-      cursor: pointer;
-    }
-    >button:focus{
-      outline: none;
-    }
   }
-  .contact-tab-list-friend{
-    width: 71vw;
-    display: none;
-    .list-friend-item{
-      width: 100%;
-      display: flex;
-      align-items: center;
-      padding: 0 14px;     
-      img{
-        width: 48px;
-        height: 48px;
-        border-radius: 50%;
-        margin-right: 20px;
-      }
-      h5{
-        margin-bottom: 0;
-        padding: 24px 0;
-        border-bottom: 1px solid #b5b0b0;
-        width: calc(100% - 164px);
-      }
-    }
-  }
-  .contact-tab-friend-request{
-    width: 71vw;
-    display: none;
-    background-color: #F0F2F5;
-    h6{
-      margin-left: 20px;
-      margin-bottom: 20px;
-    }
-    .friend-request-receive{
-      width: 100%;
-      padding: 0 20px;
-      display: flex;
-      overflow: auto;
-      .friend-request-receive-item{
-        width: 250px;
-        padding: 20px;
-        background-color: #fff;
-        border-radius: 10px;
-        >div{
-          display: flex;
-          align-items: center;
-        }
-        .block-btn-reponse-request{
-          margin-top: 10px;
-          padding-right: 10px;
-          width: 100%;
-          display: flex;
-          justify-content: center;
-          button{
-            margin-left: 10px;
-            padding: 6px 0;
-            width: 115px;
-            border: none;
-            font-weight: 600;
-            border-radius: 10px;
-          }
-          .btn-accept-request{
-            background-color: #0084ff;
-            color: #fff;
-          }
-        }
-        img{
-          width: 48px;
-          height: 48px;
-          border-radius: 50%;
-        }
-        h6{
-          margin-bottom: 0;
-        }
-        p{
-          margin: 0;
-          margin-left: 20px;
-        }
-      }
-    }
-  }
-  .header-contact-tab{
-    width: 100%;
-    padding:20px 20px;
-    font-size: 20px;
-    font-weight: 500;
-    background-color: #fff;
-    border-bottom: solid 1px #b5b0b0;
-    margin-bottom: 20px;
-    i{
-      font-size: 20px;
-    }
-  }
+  
   .modal-add-friend{
     z-index: 1000;
     width: 100vw;
@@ -591,10 +418,183 @@ body{
   .block-profile.open{
     display: block;
   }
+}
+
+.taskbar{
+  width: 4vw;
+  height: 100vh;
+  background-color: #0084ff;
+  position: relative;
+  img{
+    width: 3.9vw;
+    height: 3.9vw;
+    border-radius: 50%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .icon-taskbar{
+    color: #fff;
+    width: 100%;
+    padding: 16px 0;
+    background: #0084ff;
+    border: none;
+    //margin-top: 20px;
+    i{
+      font-size: 24px;
+    }
+  }
+  .icon-taskbar:hover{
+    background: rgba(0,0,0,0.1);
+    cursor: pointer;
+  }
+  .icon-taskbar:focus{
+    outline: none;
+  }
   
-
-
-
+  .btn-logout{
+    background-color: #0084ff;
+    color: #fff;
+    width: 100%;
+    padding: 16px 0;
+    position: absolute;
+    bottom: 10px;  
+    border: none;
+    i{
+      font-size: 24px;
+    }
+  }
+  .btn-logout:hover{
+    cursor: pointer;
+    background: rgba(0,0,0,0.1);
+  }
+  .btn-logout:focus{
+    outline: none;
+  }
+  .modal-myprofile{
+    z-index: 1000;
+    width: 100vw;
+    height: 100vh;
+    display: none;
+    position: absolute;
+    bottom: 0;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0,0,0,0.4);
+    .my-profile{
+      display: block;
+      width: 400px;
+      height: 500px;
+      border-radius: 50px;
+      animation: modalFadeIn ease 0.5s;
+      .block-my-pro{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        .profile-avatar{
+          width: 80px;
+          height: 80px;
+          margin-bottom: 16px;
+          .my-avatar{
+            width: 100%;
+            height: 100%;
+          }
+        }
+      }
+      }
+    }
+  
+  .modal-myprofile.open{
+    display: flex;
+  }
+}
+.contact-tab-list-friend{
+  width: 71vw;
+  .list-friend-item{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 14px;     
+    img{
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+      margin-right: 20px;
+    }
+    h5{
+      margin-bottom: 0;
+      padding: 24px 0;
+      border-bottom: 1px solid #b5b0b0;
+      width: calc(100% - 164px);
+    }
+  }
+}
+.contact-tab-friend-request{
+  width: 71vw;
+  background-color: #F0F2F5;
+  h6{
+    margin-left: 20px;
+    margin-bottom: 20px;
+  }
+  .friend-request-receive{
+    width: 100%;
+    padding: 0 20px;
+    display: flex;
+    overflow: auto;
+    .friend-request-receive-item{
+      width: 250px;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 10px;
+      >div{
+        display: flex;
+        align-items: center;
+      }
+      .block-btn-reponse-request{
+        margin-top: 10px;
+        padding-right: 10px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        button{
+          margin-left: 10px;
+          padding: 6px 0;
+          width: 115px;
+          border: none;
+          font-weight: 600;
+          border-radius: 10px;
+        }
+        .btn-accept-request{
+          background-color: #0084ff;
+          color: #fff;
+        }
+      }
+      img{
+        width: 48px;
+        height: 48px;
+        border-radius: 50%;
+      }
+      h6{
+        margin-bottom: 0;
+      }
+      p{
+        margin: 0;
+        margin-left: 20px;
+      }
+    }
+  }
+}
+.header-contact-tab{
+  width: 100%;
+  padding:20px 20px;
+  font-size: 20px;
+  font-weight: 500;
+  background-color: #fff;
+  border-bottom: solid 1px #b5b0b0;
+  margin-bottom: 20px;
+  i{
+    font-size: 20px;
+  }
+}
 
 
 .full-form-login{
@@ -775,14 +775,7 @@ body{
     margin: 0;
   }
 }
- .block-list-user, .full-message-block, .contact-tab-list-friend, 
- .contact-tab-friend-request, .menu-contact{
-  display: none;
-}
 
-.open{
-  display: block;
-}
 
 @keyframes modalFadeIn{
   from {
