--- a/app/src/resources/views/chat.hbs
+++ b/app/src/resources/views/chat.hbs
@@ -33,12 +33,12 @@
     <div class="taskbar">
         <img class="js-my-avatar" src="{{userNameFInstance.avatar}}" alt="">
         
-        <button class="js-icon-taskbar-chat icon-taskbar select" onclick="openTaskbarChat()">
-            <i class="ti-comment-alt "></i>
-        </button>
+         <button class="js-icon-taskbar-chat icon-taskbar select" onclick="openTaskbarChat()">
+                <i class="ti-comment-alt "></i>
+         </button>
         {{!-- Btn friend --}}
         <form action="/friend/home" method="get">
-         <button class="js-icon-taskbar-list icon-taskbar" onclick="openTaskbarContact()">
+         <button class="js-icon-taskbar-list icon-taskbar btn-list-friend" onclick="openTaskbarContact()">
             <i class="ti-user"></i>
          </button>
 
